app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  vproapp
  namespace: vproapp
  labels:
    app:  vproapp
spec:
  selector:
    matchLabels:
      app: vproapp
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  vproapp
    spec:
      containers:
      - name:  vproapp
        image:  lislaw48/husarska:app4.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        ports:
        - containerPort:  8080
          name:  vproapp
      restartPolicy: Always
