memcached.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  memcached
  namespace: vproapp
  labels:
    app:  memcached
spec:
  selector:
    matchLabels:
      app: memcached
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  memcached
    spec:
      containers:
      - name:  memcached
        image:  memcached:latest
        resources:
        ports:
        - containerPort:  80
          name:  memcached
