rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: vproapp
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
  - name: http
    port: 15672
    targetPort: 15672
  type: ClusterIP  # Możesz zmienić na ClusterIP lub LoadBalancer zależnie od środowiska
